<resources>
    <string name="app_name">TIFAC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="akgec_skills_logo">AKGEC Skills Logo</string>
    <string name="akgec_digital_school">AKGEC Digital School</string>
    <string name="go_to_akgecskills_in">Go to akgecskills.in</string>
    <string name="based_on_accumulated_research_expertise_in_system_biology_with_the_vision_of_helping_understand_life_mechanism_better">Based on accumulated research expertise in system biology with the vision of helping understand life mechanism better.</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="channel_logo">Channel Logo</string>
    <string name="click_to_open_akgec_skills">Click to open AKGEC Skills</string>
    <string name="sort_button">Sort Button</string>
    <string name="filter_button">Filter Button</string>
    <string name="sort">Sort</string>
    <string name="akgec_skills">AKGEC Skills</string>
    <string name="filter">Filter</string>
    <string name="search_lecture">Search lecture</string>
    <string name="back">Back</string>
    <string name="recommendation">Recommendation</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="akgec_logo">AKGEC Logo</string>
    <string name="search">Search</string>
</resources>