<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.splash.SplashFragment"
        android:background="@color/color4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color4">

            <ImageView
                android:id="@+id/akgec_skills_logo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginTop="221dp"
                android:layout_marginEnd="84dp"
                android:adjustViewBounds="true"
                android:src="@drawable/akgec_skills_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/akgec_skills_logo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/akgec_digital_school_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="49dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/color1"
                android:fontFamily="@font/gilroy_medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/akgec_digital_school"
                android:letterSpacing="0.015"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/akgec_skills_logo" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/akgec_skills_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/go_to_akgecskills_in"
                android:textSize="20sp"
                android:letterSpacing="0.05"
                android:textColor="@color/color2"
                android:drawableStart="@drawable/ic_browser"
                android:drawablePadding="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/akgec_digital_school_btn" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/based_on_accumulated_research_expertise_in_system_biology_with_the_vision_of_helping_understand_life_mechanism_better"
                android:textSize="14sp"
                android:fontFamily="@font/gilroy_medium"
                android:gravity="center"
                android:textColor="@color/color5"
                android:layout_marginTop="131dp"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="39dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/akgec_skills_btn"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>