<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color4"
        android:orientation="vertical"
        tools:context=".presentation.ui.videoPlayer.VideoPlayerActivity">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="28dp"
                    android:layout_height="24dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_back"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/back" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:fontFamily="@font/gilroy_medium"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/color3"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                
                <ImageView
                    android:id="@+id/akgec_skills_btn"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:padding="5dp"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_browser"
                    android:layout_gravity="end"
                    android:contentDescription="@string/akgec_skills" />

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">


                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/color4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bg_1"
                    app:layout_constraintBottom_toBottomOf="@id/recommendation_recyclerView"/>

                <View
                    android:id="@+id/bg_1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="-24dp"
                    android:background="@drawable/toolbar_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/youtube_player_view"
                    app:layout_constraintBottom_toBottomOf="@id/akgec_logo_img_vw"/>

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:enableAutomaticInitialization="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/video_name_txt_vw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/gilroy_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/color6"
                    app:layout_constraintTop_toBottomOf="@id/youtube_player_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <ImageView
                    android:id="@+id/akgec_logo_img_vw"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/akgec_logo"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/video_name_txt_vw"
                    android:contentDescription="@string/akgec_digital_school" />

                <TextView
                    android:id="@+id/no_of_videos_txt_vw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/gilroy_semibold"
                    android:textSize="12sp"
                    android:textColor="@color/color13"
                    app:layout_constraintStart_toEndOf="@id/akgec_logo_img_vw"
                    app:layout_constraintTop_toTopOf="@id/akgec_logo_img_vw"
                    app:layout_constraintBottom_toBottomOf="@id/akgec_logo_img_vw"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/recommended_txt_vw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/gilroy_semibold"
                    android:textSize="20sp"
                    android:textColor="@color/color3"
                    android:text="@string/recommendation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/akgec_logo_img_vw"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recommendation_recyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="21dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recommended_txt_vw"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>